New ECS system approach.

--- a/destral_ecs.vcxproj.filters
+++ b/destral_ecs.vcxproj.filters
@@ -15,16 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.c">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="compile_headeronly.c">
+    <ClCompile Include="compile_headeronly.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="destral_ecs.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="destral_ecs.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
