--- a/destral_ecs.vcxproj
+++ b/destral_ecs.vcxproj
@@ -19,11 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="compile_headeronly.c" />
+    <ClCompile Include="compile_headeronly.cpp" />
     <ClInclude Include="destral_ecs.h" />
-    <ClCompile Include="main.c">
+    <ClCompile Include="main.cpp">
       <FileType>CppCode</FileType>
     </ClCompile>
+    <ClInclude Include="destral_ecs.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -124,7 +125,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard_C>Default</LanguageStandard_C>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
